Realización de 4.4 Lenguaje Marcas

--- a/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/css/css.css
+++ b/LenguajeMarcas/2do_Trimestre/Ejercicio4.3/css/css.css
@@ -71,3 +71,21 @@ table,tr,td{
     background-color:  #ffc7f8;
 
 }
+
+#Row1{
+
+    width: 30%;
+
+}
+
+#Row2{
+
+    width: 50%;
+
+}
+
+#Row3{
+
+    width: 20%;
+
+}
