--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/css/css.css
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/css/css.css
@@ -61,7 +61,9 @@ body{
 table,tr,td{
 
     border: 1px solid;
-    border-collapse: collapse;
+    padding: 1px;
+    border-spacing:1px; 
+
 
 }
 
