--- a/LenguajeMarcas/2do_Trimestre/PáginaWeb/css/css.css
+++ b/LenguajeMarcas/2do_Trimestre/PáginaWeb/css/css.css
@@ -1,111 +1,18 @@
-body{
+/* News Section */
 
-    font-family: sans-serif;
-    background-color: #77bbff;
-
-
+/* Exercise: Relative positioning for sports news */
+.relative-news {
+    position: relative;
+    left: 20px;
+    top: 10px;
 }
 
-#header{
-
-    background-color: blanchedalmond;
-    margin-bottom: 15px;
-    border: 1px solid;
-    border-radius: 15px;
-    
-}
-
-#title{
-    
-    text-align: center;
-    font-size: 75px;
-
-
-}
-
-#sub-title{
-
-    text-align: center;
-
-
-}
-
-/* Aliens */
-
-#contentAliens{
-
-    border: 1px solid black;
-    border-radius: 15px;
-    background-color: blanchedalmond;
-    margin-bottom: 15px ;
-    margin-top: 15px ;
-
-}
-
-#titleAliens{
-
-    text-align: center;
-    font-weight: bold;
-
-}
-
-#subtitleAliens{
-
-    font-weight: bold;
-    
-}
-
-
-/* Tables */
-
-table,tr,td,th{
-
-    border: 1px solid;
-    padding: 1px;
-    border-spacing:1px; 
-
-
-}
-
-#table1{
-
-    width: 100%;
-    background-color:  #ffc7f8;
-
-}
-
-#Row1{
-
-    width: 30%;
-
-}
-
-#Row2{
-
-    width: 50%;
-
-}
-
-#Row3{
-
-    width: 20%;
-
-}
-
-/* News */
-
-
-/* Add this rule to make strong elements italic inside news items */
+/* Rule to make strong elements italic inside news items (Ex 4.21bis) */
 .news-item strong {
     font-style: italic;
 }
 
-/* Container Styles (Keep these as they are) */
-.sports-container {
-    background-color: #e8f5e9;
-    border-left: 6px solid #2e7d32;
-}
-
+/* Container Styles (Backgrounds and Borders) */
 .sports-container {
     background-color: #e8f5e9;
     border-left: 6px solid #2e7d32;
